<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textLabelWeight"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/editTextWeightHint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/labelWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textLabelGender"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/radioButtonFemale"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/labelGender"
        app:layout_constraintTop_toBottomOf="@+id/editWeight">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonFemale" />

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonMale" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSetWeight"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonSetWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <TextView
        android:id="@+id/labelWeightGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textLabelWeightGender"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetWeight" />

    <TextView
        android:id="@+id/labelWeightGenderDisplay"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelWeightGender"
        app:layout_constraintStart_toEndOf="@+id/labelWeightGender" />

    <TextView
        android:id="@+id/labelDrinkSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textLabelDrinkSize"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelWeightGender" />

    <RadioGroup
        android:id="@+id/radioGroupDrinkSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:checkedButton="@id/radioButtonOneOunce"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/labelDrinkSize"
        app:layout_constraintTop_toBottomOf="@+id/labelWeightGenderDisplay">

        <RadioButton
            android:id="@+id/radioButtonOneOunce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonOneOunce" />

        <RadioButton
            android:id="@+id/radioButtonFiveOunce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonFiveOunce" />

        <RadioButton
            android:id="@+id/radioButtonTwelveOunce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonTwelveOunce" />
    </RadioGroup>

    <TextView
        android:id="@+id/labelAlcoholPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textLabelAlcPercent"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDrinkSize" />

    <SeekBar
        android:id="@+id/seekBarAlcoholPercent"
        android:layout_width="214dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:max="30"
        android:progress="15"
        app:layout_constraintStart_toEndOf="@+id/labelAlcoholPercent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDrinkSize" />

    <TextView
        android:id="@+id/labelCurrAlcoholPercent"
        android:layout_width="42dp"
        android:layout_height="26dp"
        android:text="@string/textLabelAlcPercentDefault"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/seekBarAlcoholPercent"
        app:layout_constraintTop_toTopOf="@+id/seekBarAlcoholPercent" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/buttonReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarAlcoholPercent" />

    <Button
        android:id="@+id/buttonAddDrink"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/buttonAddDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarAlcoholPercent" />

    <TextView
        android:id="@+id/labelNumDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textLabelDrinks"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <TextView
        android:id="@+id/labelBACLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textLabelBAC"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNumDrinks" />

    <TextView
        android:id="@+id/labelYourStatus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/textLabelYourStatus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBACLevel" />

    <TextView
        android:id="@+id/labelCurrStatus"
        android:layout_width="145dp"
        android:layout_height="37dp"
        android:layout_marginEnd="56dp"
        android:background="@color/green"
        android:text="@string/textLabelStatusGreen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelYourStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>